<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/chat_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_alignParentTop="true"
        android:background="@color/maincolor"
        >
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginLeft="8dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/other_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/all_white"
            android:text="关于我们"
            android:textSize="@dimen/size_18" />

    </RelativeLayout>

    <ImageView
        android:layout_below="@id/chat_title"
        android:id="@+id/aboutme_iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="32dp"
        android:scaleType="matrix"
        android:src="@drawable/start_icon" />

    <TextView
        android:layout_below="@id/aboutme_iv_icon"
        android:id="@+id/aboutme_tv_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="容联七陌"
        android:textColor="@color/all_black"
        android:textSize="18sp" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/aboutme_tv_version"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="公司介绍:"
            android:textSize="22sp"
            android:textColor="@color/all_black"
            android:layout_marginLeft="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutme"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/aboutme_tv_company"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/about_company"
        android:textColor="@color/all_black"
        android:textSize="12sp" />
    <TextView
        android:layout_above="@id/aboutme_tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/about_copyright"
        android:textColor="@color/all_black"
        android:textSize="12sp" />
</RelativeLayout>
